--- a/index.html
+++ b/index.html
@@ -1,437 +1,371 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>Tax Owing Tracker</title>
 
 <style>
 :root{
-    --bg:#0e0e0e;
-    --panel:#161616;
-    --panel-dark:#111;
-    --border:#2a2a2a;
-    --text:#f5f5f5;
-    --muted:#9a9a9a;
-    --accent:linear-gradient(90deg,#ff5f57,#ffb347);
+ --bg:#0e0e0e;
+ --panel:#161616;
+ --panel-dark:#111;
+ --border:#2a2a2a;
+ --text:#f5f5f5;
+ --muted:#9a9a9a;
+ --accent:linear-gradient(90deg,#ff5f57,#ffb347);
 }
-
-*{box-sizing:border-box;}
-
+*{box-sizing:border-box}
 body{
-    margin:0;
-    height:100vh;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    background:var(--bg);
-    color:var(--text);
-    font-family:system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
+ margin:0;
+ height:100vh;
+ display:flex;
+ align-items:center;
+ justify-content:center;
+ background:var(--bg);
+ color:var(--text);
+ font-family:system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
 }
-
 .app{
-    width:420px;
-    background:var(--panel);
-    padding:24px;
-    border-radius:16px;
-    box-shadow:0 0 40px rgba(0,0,0,.6);
-    max-height:90vh;
-    overflow-y:auto;
+ width:420px;
+ background:var(--panel);
+ padding:24px;
+ border-radius:16px;
+ box-shadow:0 0 40px rgba(0,0,0,.6);
+ max-height:90vh;
+ overflow-y:auto;
 }
-
-h1{
-    font-size:18px;
-    margin:0 0 10px 0;
-}
+h1{margin:0 0 10px 0;font-size:18px}
 
 .fy-row{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    margin-bottom:14px;
+ display:flex;
+ justify-content:space-between;
+ align-items:center;
+ margin-bottom:14px;
 }
 
 .fy-controls{
-    display:flex;
-    align-items:center;
-    gap:8px;
-    font-size:12px;
-    opacity:.8;
+ display:flex;
+ align-items:center;
+ gap:8px;
+ font-size:12px;
+ opacity:.8;
 }
 
 .numbers{
-    display:flex;
-    justify-content:space-between;
-    margin-bottom:10px;
+ display:flex;
+ justify-content:space-between;
+ margin-bottom:10px;
 }
-
-.threshold{
-    font-size:13px;
-    opacity:.7;
-}
+.threshold{font-size:13px;opacity:.7}
 
 .totals{
-    display:flex;
-    flex-direction:column;
-    align-items:flex-end;
+ display:flex;
+ flex-direction:column;
+ align-items:flex-end;
 }
 
-#incomeDisplay{font-size:15px;}
-#taxEstimate{
-    font-size:11px;
-    color:var(--muted);
-}
+#incomeDisplay{font-size:15px}
+#taxEstimate{font-size:11px;color:var(--muted)}
 
 .bar-container{
-    height:10px;
-    background:var(--border);
-    border-radius:999px;
-    overflow:hidden;
+ height:10px;
+ background:var(--border);
+ border-radius:999px;
+ overflow:hidden;
+ margin-bottom:4px;
 }
-
 .bar-fill{
-    height:100%;
-    width:0;
-    background:var(--accent);
-    transition:width .25s ease;
+ height:100%;
+ width:0;
+ background:var(--accent);
+ transition:width .25s ease;
 }
 
-#marginalRate{
-    font-size:11px;
-    color:var(--muted);
-    text-align:right;
-    margin-top:6px;
-    margin-bottom:14px;
+#taxRateLabel{
+ font-size:11px;
+ color:var(--muted);
+ text-align:right;
+ margin-bottom:14px;
 }
 
 .controls{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    gap:8px;
-    margin-bottom:16px;
+ display:grid;
+ grid-template-columns:1fr 1fr;
+ gap:8px;
+ margin-bottom:16px;
 }
 
 input,button{
-    background:#0f0f0f;
-    border:1px solid #333;
-    color:var(--text);
-    padding:8px;
-    border-radius:6px;
-    font-size:13px;
+ background:#0f0f0f;
+ border:1px solid #333;
+ color:var(--text);
+ padding:8px;
+ border-radius:6px;
+ font-size:13px;
 }
+button{cursor:pointer}
+button:hover{background:#222}
 
-button{cursor:pointer;}
-button:hover{background:#222;}
-
-.section{
-    margin-bottom:14px;
-}
-
+.section{margin-bottom:14px}
 .section h2{
-    display:flex;
-    justify-content:space-between;
-    font-size:13px;
-    margin:0 0 6px 0;
-    opacity:.7;
+ display:flex;
+ justify-content:space-between;
+ font-size:13px;
+ margin:0 0 6px 0;
+ opacity:.7;
 }
-
 .log-item{
-    background:var(--panel-dark);
-    padding:6px 8px;
-    border-radius:6px;
-    margin-bottom:6px;
-    font-size:13px;
+ background:var(--panel-dark);
+ padding:6px 8px;
+ border-radius:6px;
+ margin-bottom:6px;
+ font-size:13px;
 }
+.log-top{display:flex;justify-content:space-between}
+.desc{font-size:12px;opacity:.6;margin-top:2px}
+.delete{color:#ff5f57;cursor:pointer;font-size:12px}
 
-.log-top{
-    display:flex;
-    justify-content:space-between;
-}
-
-.desc{
-    font-size:12px;
-    opacity:.6;
-    margin-top:2px;
-}
-
-.delete{
-    color:#ff5f57;
-    cursor:pointer;
-    font-size:12px;
-}
-
-.nav{margin-bottom:12px;}
-.hidden{display:none!important;}
+.hidden{display:none!important}
 
 .modal-backdrop{
-    position:fixed;
-    inset:0;
-    background:rgba(0,0,0,.6);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    z-index:999;
+ position:fixed;
+ inset:0;
+ background:rgba(0,0,0,.6);
+ display:flex;
+ align-items:center;
+ justify-content:center;
+ z-index:999;
 }
-
 .modal{
-    background:var(--panel);
-    padding:20px;
-    border-radius:12px;
-    width:300px;
+ background:var(--panel);
+ padding:20px;
+ border-radius:12px;
+ width:320px;
 }
 </style>
 </head>
-
 <body>
 
-<div class="app">
+<!-- HELP MODAL -->
+<div id="onboarding" class="modal-backdrop hidden">
+ <div class="modal">
+   <div id="slide-content"></div>
+   <div style="display:flex;justify-content:flex-end;margin-top:16px;">
+     <button onclick="nextSlide()">Continue</button>
+   </div>
+ </div>
+</div>
 
-<div id="screen-main">
+<!-- RESET MODAL -->
+<div id="resetModal" class="modal-backdrop hidden">
+ <div class="modal">
+   <div style="margin-bottom:12px">Reset financial year?</div>
+   <div id="resetText" style="font-size:12px;opacity:.7;margin-bottom:16px"></div>
+   <div style="display:flex;gap:8px;justify-content:flex-end">
+     <button onclick="closeResetModal()">No</button>
+     <button onclick="doResetFY()" style="background:#ff5f57;border-color:#ff5f57">Yes</button>
+   </div>
+ </div>
+</div>
+
+<div class="app">
 
 <h1>Tax Owing Tracker</h1>
 
 <div class="fy-row">
-    <div class="fy-controls">
-        <button onclick="changeFY(-1)">←</button>
-        <span id="fyText"></span>
-        <button onclick="changeFY(1)">→</button>
-    </div>
-    <button onclick="openResetModal()" style="font-size:11px;opacity:.6">Reset FY</button>
+ <div class="fy-controls">
+   <button onclick="changeFY(-1)">←</button>
+   <span id="fyText"></span>
+   <button onclick="changeFY(1)">→</button>
+ </div>
+ <div style="display:flex;gap:6px;">
+   <button onclick="showOnboarding()" style="width:26px;height:26px;padding:0;">?</button>
+   <button onclick="openResetModal()" style="font-size:11px;opacity:.6">Reset FY</button>
+ </div>
 </div>
 
 <div class="numbers">
-    <div class="threshold">$18,200</div>
-    <div class="totals">
-        <div id="incomeDisplay">$0</div>
-        <div id="taxEstimate"></div>
-    </div>
+ <div class="threshold">$18,200</div>
+ <div class="totals">
+   <div id="incomeDisplay">$0</div>
+   <div id="taxEstimate"></div>
+ </div>
 </div>
 
 <div class="bar-container">
-    <div class="bar-fill" id="barFill"></div>
+ <div class="bar-fill" id="barFill"></div>
 </div>
-
-<div id="marginalRate"></div>
-
-<div style="font-size:11px;color:#7a7a7a;margin:-10px 0 14px 0;">
-The goal is to bring this back to $18,200.
-</div>
+<div id="taxRateLabel"></div>
 
 <div class="controls">
-    <input id="amountInput" type="number" placeholder="Amount $" />
-    <input id="descInput" type="text" placeholder="Description" />
-    <button onclick="addIncome()">Add Income</button>
-    <button onclick="addDeduction()">Add Deduction</button>
+ <input id="amountInput" type="number" placeholder="Amount $">
+ <input id="descInput" type="text" placeholder="Description">
+ <button onclick="addIncome()">Add Income</button>
+ <button onclick="addDeduction()">Add Deduction</button>
 </div>
 
 <div class="section">
-    <h2>Income <button onclick="showIncome()">View all</button></h2>
-    <div id="incomePreview"></div>
+ <h2>Income</h2>
+ <div id="incomePreview"></div>
 </div>
 
 <div class="section">
-    <h2>Deductions <button onclick="showDeductions()">View all</button></h2>
-    <div id="deductionPreview"></div>
+ <h2>Deductions</h2>
+ <div id="deductionPreview"></div>
 </div>
 
-</div>
-
-<div id="screen-income" class="hidden">
-<div class="nav"><button onclick="showMain()">← Back</button></div>
-<h1>Income Log</h1>
-<div id="incomeLog"></div>
-</div>
-
-<div id="screen-deduction" class="hidden">
-<div class="nav"><button onclick="showMain()">← Back</button></div>
-<h1>Deduction Log</h1>
-<div id="deductionLog"></div>
-</div>
-
-</div>
-
-<!-- RESET MODAL -->
-<div id="resetModal" class="hidden">
-<div class="modal-backdrop" onclick="closeResetModal()">
-<div class="modal" onclick="event.stopPropagation()">
-<div style="margin-bottom:12px">Reset financial year?</div>
-<div id="resetText" style="font-size:12px;opacity:.7;margin-bottom:16px"></div>
-<div style="display:flex;gap:8px;justify-content:flex-end">
-<button onclick="closeResetModal()">No</button>
-<button onclick="doResetFY()" style="background:#ff5f57;border-color:#ff5f57">Yes</button>
-</div>
-</div>
-</div>
 </div>
 
 <script>
 
-/* ---------- Progressive Tax ---------- */
+/* -------- Progressive Tax Brackets -------- */
 function calculateTax(income){
-    if(income <= 18200) return 0;
-
-    if(income <= 45000)
-        return (income - 18200) * 0.19;
-
-    if(income <= 120000)
-        return (45000-18200)*0.19 + (income-45000)*0.325;
-
-    if(income <= 180000)
-        return (45000-18200)*0.19 +
-               (120000-45000)*0.325 +
-               (income-120000)*0.37;
-
-    return (45000-18200)*0.19 +
-           (120000-45000)*0.325 +
-           (180000-120000)*0.37 +
-           (income-180000)*0.45;
+ if(income<=18200) return 0;
+ if(income<=45000) return (income-18200)*0.19;
+ if(income<=120000) return (45000-18200)*0.19+(income-45000)*0.325;
+ if(income<=180000) return (45000-18200)*0.19+(120000-45000)*0.325+(income-120000)*0.37;
+ return (45000-18200)*0.19+(120000-45000)*0.325+(180000-120000)*0.37+(income-180000)*0.45;
 }
 
-function getMarginalRate(income){
-    if(income <= 18200) return 0;
-    if(income <= 45000) return 19;
-    if(income <= 120000) return 32.5;
-    if(income <= 180000) return 37;
-    return 45;
+function currentMarginalRate(income){
+ if(income<=18200) return 0;
+ if(income<=45000) return 0.19;
+ if(income<=120000) return 0.325;
+ if(income<=180000) return 0.37;
+ return 0.45;
 }
 
-/* ---------- FY ---------- */
+/* -------- FY Logic -------- */
 function getFinancialYear(){
-    const d=new Date();
-    const y=d.getFullYear();
-    return d.getMonth()>=6?`${y}-${y+1}`:`${y-1}-${y}`;
+ const d=new Date();
+ const y=d.getFullYear();
+ return d.getMonth()>=6?`${y}-${y+1}`:`${y-1}-${y}`;
 }
-
 let currentFY=getFinancialYear();
 const STORAGE_KEY="taxTrackerFY";
 let store=JSON.parse(localStorage.getItem(STORAGE_KEY))||{};
 if(!store[currentFY]) store[currentFY]={incomes:[],deductions:[]};
-
 let incomes=store[currentFY].incomes;
 let deductions=store[currentFY].deductions;
 
 function save(){
-    store[currentFY]={incomes,deductions};
-    localStorage.setItem(STORAGE_KEY,JSON.stringify(store));
+ store[currentFY]={incomes,deductions};
+ localStorage.setItem(STORAGE_KEY,JSON.stringify(store));
 }
 
-/* ---------- UI ---------- */
+/* -------- UI -------- */
 const incomeDisplay=document.getElementById("incomeDisplay");
 const taxEstimate=document.getElementById("taxEstimate");
+const taxRateLabel=document.getElementById("taxRateLabel");
 const barFill=document.getElementById("barFill");
-const marginalRateEl=document.getElementById("marginalRate");
 const amountInput=document.getElementById("amountInput");
 const descInput=document.getElementById("descInput");
 const incomePreview=document.getElementById("incomePreview");
 const deductionPreview=document.getElementById("deductionPreview");
-const incomeLog=document.getElementById("incomeLog");
-const deductionLog=document.getElementById("deductionLog");
 
 function setFYLabel(){
-    document.getElementById("fyText").textContent=`Financial Year: ${currentFY}`;
+ document.getElementById("fyText").textContent=`Financial Year: ${currentFY}`;
 }
 
 function totals(){
-    return{
-        gross:incomes.reduce((a,b)=>a+b.amount,0),
-        ded:deductions.reduce((a,b)=>a+b.amount,0)
-    };
+ return{
+   gross:incomes.reduce((a,b)=>a+b.amount,0),
+   ded:deductions.reduce((a,b)=>a+b.amount,0)
+ };
 }
 
 function updateUI(){
-    const {gross,ded}=totals();
-    const net=gross-ded;
-    const taxable=Math.max(net,0);
-    const tax=calculateTax(taxable);
-    const marginal=getMarginalRate(taxable);
+ const {gross,ded}=totals();
+ const net=gross-ded;
+ const taxable=Math.max(net,0);
+ const tax=calculateTax(taxable);
 
-    incomeDisplay.textContent=`$${net.toLocaleString()}`;
+ incomeDisplay.textContent=`$${net.toLocaleString()}`;
+ taxEstimate.textContent=tax>0
+   ?`$${tax.toLocaleString(undefined,{minimumFractionDigits:2,maximumFractionDigits:2})} tax estimate`
+   :"";
 
-    taxEstimate.textContent=tax>0
-        ?`$${tax.toLocaleString(undefined,{minimumFractionDigits:2,maximumFractionDigits:2})} tax estimate`
-        :"";
+ const rate=currentMarginalRate(taxable);
+ taxRateLabel.textContent=rate>0?`${(rate*100).toFixed(rate===0.325?1:0)}c`:"";
 
-    marginalRateEl.textContent=marginal>0?`${marginal}c`:"";
+ barFill.style.width=Math.min((taxable/50000)*100,100)+"%";
 
-    barFill.style.width=Math.min((taxable/50000)*100,100)+"%";
+ incomePreview.innerHTML=incomes.slice(-3).reverse().map(renderItem).join("");
+ deductionPreview.innerHTML=deductions.slice(-3).reverse().map(renderItem).join("");
 
-    renderPreviews();
-    renderLogs();
-    save();
-}
-
-function renderPreviews(){
-    incomePreview.innerHTML=incomes.slice(-3).reverse().map(renderItem).join("");
-    deductionPreview.innerHTML=deductions.slice(-3).reverse().map(renderItem).join("");
-}
-
-function renderLogs(){
-    incomeLog.innerHTML=incomes.map((i,idx)=>renderItemWithDelete("income")(i,idx)).reverse().join("");
-    deductionLog.innerHTML=deductions.map((i,idx)=>renderItemWithDelete("deduction")(i,idx)).reverse().join("");
+ save();
 }
 
 function renderItem(item){
-    return `<div class="log-item"><div class="log-top"><span>$${item.amount.toLocaleString()}</span></div><div class="desc">${item.desc||"—"}</div></div>`;
+ return `<div class="log-item">
+   <div class="log-top"><span>$${item.amount.toLocaleString()}</span></div>
+   <div class="desc">${item.desc||"—"}</div>
+ </div>`;
 }
 
-function renderItemWithDelete(type){
-    return (item,i)=>`<div class="log-item"><div class="log-top"><span>${type==="income"?"$":"-$"}${item.amount.toLocaleString()}</span><span class="delete" onclick="deleteEntry('${type}',${i})">✕</span></div><div class="desc">${item.desc||"—"}</div></div>`;
-}
-
-/* ---------- Actions ---------- */
+/* -------- Actions -------- */
 function addIncome(){
-    const amount=Number(amountInput.value);
-    if(!amount) return;
-    incomes.push({amount,desc:descInput.value});
-    clearInputs();updateUI();
+ const amount=Number(amountInput.value);
+ if(!amount)return;
+ incomes.push({amount,desc:descInput.value});
+ amountInput.value="";descInput.value="";
+ updateUI();
 }
 function addDeduction(){
-    const amount=Number(amountInput.value);
-    if(!amount) return;
-    deductions.push({amount,desc:descInput.value});
-    clearInputs();updateUI();
+ const amount=Number(amountInput.value);
+ if(!amount)return;
+ deductions.push({amount,desc:descInput.value});
+ amountInput.value="";descInput.value="";
+ updateUI();
 }
-function deleteEntry(type,index){
-    type==="income"?incomes.splice(index,1):deductions.splice(index,1);
-    updateUI();
-}
-function clearInputs(){amountInput.value="";descInput.value="";}
-
-/* ---------- Navigation ---------- */
-function toggle(id){
-    document.querySelectorAll("[id^='screen']").forEach(s=>s.classList.add("hidden"));
-    document.getElementById(id).classList.remove("hidden");
-}
-function showMain(){toggle("screen-main");}
-function showIncome(){toggle("screen-income");}
-function showDeductions(){toggle("screen-deduction");}
 
 function changeFY(direction){
-    const [start]=currentFY.split("-").map(Number);
-    const next=start+direction;
-    currentFY=`${next}-${next+1}`;
-    if(!store[currentFY]) store[currentFY]={incomes:[],deductions:[]};
-    incomes=store[currentFY].incomes;
-    deductions=store[currentFY].deductions;
-    setFYLabel();
-    updateUI();
+ const [start]=currentFY.split("-").map(Number);
+ const next=start+direction;
+ currentFY=`${next}-${next+1}`;
+ if(!store[currentFY]) store[currentFY]={incomes:[],deductions:[]};
+ incomes=store[currentFY].incomes;
+ deductions=store[currentFY].deductions;
+ setFYLabel();
+ updateUI();
 }
 
-/* ---------- Reset ---------- */
+/* -------- Reset -------- */
 function openResetModal(){
-    document.getElementById("resetText").textContent=`This will permanently delete all data for ${currentFY}.`;
-    document.getElementById("resetModal").classList.remove("hidden");
+ document.getElementById("resetText").textContent=`Delete all data for ${currentFY}?`;
+ document.getElementById("resetModal").classList.remove("hidden");
 }
 function closeResetModal(){
-    document.getElementById("resetModal").classList.add("hidden");
+ document.getElementById("resetModal").classList.add("hidden");
 }
 function doResetFY(){
-    incomes.length=0;
-    deductions.length=0;
-    updateUI();
-    closeResetModal();
+ incomes.length=0;
+ deductions.length=0;
+ updateUI();
+ closeResetModal();
 }
 
-/* ---------- Init ---------- */
+/* -------- Help Slides -------- */
+const slides=[
+ {html:`<h2>Income</h2><p>Money you earn from customers.</p>`},
+ {html:`<h2>Deduction</h2><p>Business expenses reduce taxable income.</p>`}
+];
+let currentSlide=0;
+function showOnboarding(){
+ document.getElementById("onboarding").classList.remove("hidden");
+ document.getElementById("slide-content").innerHTML=slides[currentSlide].html;
+}
+function nextSlide(){
+ currentSlide++;
+ if(currentSlide>=slides.length){
+   document.getElementById("onboarding").classList.add("hidden");
+   currentSlide=0;
+ }else{
+   document.getElementById("slide-content").innerHTML=slides[currentSlide].html;
+ }
+}
+
+/* -------- Init -------- */
 setFYLabel();
 updateUI();
 
